3.48.0
======
Oct 4, 2023
- Add JS arrow functions
    - Syntax: `(args) => body`
    - Add arrow function evaluation to REPL
    - Add new `gwen.report.attach.functions` setting to control whether or not to attach functions to steps (default is `true`)
- Introduce boolean `true` and `false` literals
- Annotation attributes can now be surrounded by back-ticks, in addition to single or double quotes
- Include messages and location of errors at end of console report
- Remove joda-time dependency and use java.time package instead

3.47.5
======
Sep 19, 2023
- Improved syntax error reporting for annotations

3.47.4
======
Sep 19, 2023
- Support square brackets in addition to curly braces for list values in annotations (former preferred)
- Override transitive libararies to pick up vulnerability fixes
  - Update guava from v32.0.1-jre to v32.1.2-jre
  - Update okio from v1.172. to v1.17.5

3.47.3
======
Sep 18, 2023
- All annotations can now accept single or double quoted values
- Prefer single quoted values over double for all annotations
- Update scala from v3.3.0 to v3.3.1

3.47.2
======
Sep 16, 2023
- Use And keyword in trailing expanded dry run value steps

3.47.1
======
Sep 16, 2023
- Fix dry run annotation logic in for-each loop
- Remove pre-existing same named loop var check and restore value when for-each finishes

3.47.0
======
Sep 15, 2023
- Introduce DryRun Annotations to specify values for bindings that cannot be resolved in dry runs
  - `@DryRun(name = '<name>', value = '<value>')`
    - To specify a single dry run value
    - The step having the annotation will be called once with this value in a dry run
  - `@DryRun(name = '<name>', value = {'<value-1>', '<value-2>', '<value-N>'})`
    - To specify multiple dry run values
    - The step having the annotation will be repeatedly called for each value in a dry run
- Both Message and DryRun annotations can now accept single quotes in addition to double quotes around values

3.46.0
======
Sep 7, 2023